--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,5 @@
 [workspace]
-members = [
-    "niri-config",
-    "niri-ipc",
-    "niri-visual-tests",
-]
+members = ["niri-config", "niri-ipc", "niri-visual-tests"]
 
 [workspace.package]
 version = "25.5.1"
@@ -21,7 +17,10 @@ clap = { version = "4.5.46", features = ["derive"] }
 insta = "1.43.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
-tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_debug"] }
+tracing = { version = "0.1.41", features = [
+    "max_level_trace",
+    "release_max_level_debug",
+] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tracy-client = { version = "0.18.2", default-features = false }
 
@@ -59,29 +58,43 @@ async-io = { version = "2.5.0", optional = true }
 atomic = "0.6.1"
 bitflags.workspace = true
 bytemuck = { version = "1.23.2", features = ["derive"] }
-calloop = { version = "0.14.3", features = ["executor", "futures-io", "signals"] }
+calloop = { version = "0.14.3", features = [
+    "executor",
+    "futures-io",
+    "signals",
+] }
 clap = { workspace = true, features = ["string"] }
 clap_complete = "4.5.57"
 clap_complete_nushell = "4.5.8"
 directories = "6.0.0"
 drm-ffi = "0.9.0"
 fastrand = "2.3.0"
-futures-util = { version = "0.3.31", default-features = false, features = ["std", "io"] }
+futures-util = { version = "0.3.31", default-features = false, features = [
+    "std",
+    "io",
+] }
 git-version = "0.3.9"
 glam = "0.30.5"
 input = { version = "0.9.1", features = ["libinput_1_21"] }
 keyframe = { version = "1.1.1", default-features = false }
 libc = "0.2.175"
-libdisplay-info = "0.2.2"
-log = { version = "0.4.27", features = ["max_level_trace", "release_max_level_debug"] }
+libdisplay-info = "0.3.0"
+log = { version = "0.4.27", features = [
+    "max_level_trace",
+    "release_max_level_debug",
+] }
 niri-config = { version = "25.5.1", path = "niri-config" }
 niri-ipc = { version = "25.5.1", path = "niri-ipc", features = ["clap"] }
 ordered-float = "5.0.0"
 pango = { version = "0.20.12", features = ["v1_44"] }
 pangocairo = "0.20.10"
-pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git", optional = true, features = ["v0_3_33"] }
+pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git", optional = true, features = [
+    "v0_3_33",
+] }
 png = "0.17.16"
-portable-atomic = { version = "1.11.1", default-features = false, features = ["float"] }
+portable-atomic = { version = "1.11.1", default-features = false, features = [
+    "float",
+] }
 profiling = "1.0.17"
 sd-notify = "0.4.5"
 serde.workspace = true
@@ -125,9 +138,15 @@ wayland-client = "0.31.11"
 xshell = "0.2.7"
 
 [features]
-default = ["dbus", "systemd", "xdp-gnome-screencast"]
+default = ["dbus", "systemd", "xdp-gnome-screencast", "appmenu"]
 # Enables D-Bus support (serve various freedesktop and GNOME interfaces, accessibility tree, power button handling).
-dbus = ["dep:zbus", "dep:async-io", "dep:url", "dep:accesskit", "dep:accesskit_unix"]
+dbus = [
+    "dep:zbus",
+    "dep:async-io",
+    "dep:url",
+    "dep:accesskit",
+    "dep:accesskit_unix",
+]
 # Enables systemd integration (global environment, apps in transient scopes).
 systemd = ["dbus"]
 # Enables screencasting support through xdg-desktop-portal-gnome.
@@ -135,7 +154,11 @@ xdp-gnome-screencast = ["dbus", "pipewire"]
 # Enables the Tracy profiler instrumentation.
 profile-with-tracy = ["profiling/profile-with-tracy", "tracy-client/default"]
 # Enables the on-demand Tracy profiler instrumentation.
-profile-with-tracy-ondemand = ["profile-with-tracy", "tracy-client/ondemand", "tracy-client/manual-lifetime"]
+profile-with-tracy-ondemand = [
+    "profile-with-tracy",
+    "tracy-client/ondemand",
+    "tracy-client/manual-lifetime",
+]
 # Enables Tracy allocation profiling.
 profile-with-tracy-allocations = ["profile-with-tracy"]
 # Enables dinit integration (global environment).
@@ -176,10 +199,34 @@ fuzzel = "*"
 [package.metadata.deb]
 depends = "alacritty, fuzzel"
 assets = [
-    ["target/release/niri", "usr/bin/", "755"],
-    ["resources/niri-session", "usr/bin/", "755"],
-    ["resources/niri.desktop", "/usr/share/wayland-sessions/", "644"],
-    ["resources/niri-portals.conf", "/usr/share/xdg-desktop-portal/", "644"],
-    ["resources/niri.service", "/usr/lib/systemd/user/", "644"],
-    ["resources/niri-shutdown.target", "/usr/lib/systemd/user/", "644"],
+    [
+        "target/release/niri",
+        "usr/bin/",
+        "755",
+    ],
+    [
+        "resources/niri-session",
+        "usr/bin/",
+        "755",
+    ],
+    [
+        "resources/niri.desktop",
+        "/usr/share/wayland-sessions/",
+        "644",
+    ],
+    [
+        "resources/niri-portals.conf",
+        "/usr/share/xdg-desktop-portal/",
+        "644",
+    ],
+    [
+        "resources/niri.service",
+        "/usr/lib/systemd/user/",
+        "644",
+    ],
+    [
+        "resources/niri-shutdown.target",
+        "/usr/lib/systemd/user/",
+        "644",
+    ],
 ]
